--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -17,3 +17,25 @@
     margin: 10px 10px;
     font-weight: 600;
 }
+
+.card {
+    display: flex;
+    max-width: 400px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid #d2d2d2;
+    border-radius: 4px;
+    margin: 20px;
+    -webkit-box-shadow: 4px 4px 5px 4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 4px 4px 5px 4px rgba(0,0,0,0.75);
+    box-shadow: 4px 4px 5px 4px rgba(0,0,0,0.75);
+}
+
+.card p {
+    padding: 10px;
+    font-size: 16px;
+    color: #f60;
+    font-weight: 600;
+}
