Updates css for menus

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -9,11 +9,13 @@
     background-color: #f60;
 }
 
-.categories-menu a {
+.categories-menu li {
     flex: 1 200px 1fr;
     padding: 10px;
     border-radius: 4px;
     color: #ffffff;
     margin: 10px 10px;
     font-weight: 600;
+    cursor: pointer;
+    list-style: none;
 }
