--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -16,7 +16,20 @@ ul, li {
   font-family: 'Sigmar One', cursive;
 }
 
+.card-container {
+
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
 .container  {
+  background-image: url('./bck_chuck.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  opacity: 0.7;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -56,7 +69,6 @@ ul, li {
     border: 1px solid;
     background-color: #fff;
     border-radius: 4px;
-    margin: 20px;
     -webkit-box-shadow: 4px 4px 5px 4px rgba(0,0,0,0.75);
     -moz-box-shadow: 4px 4px 5px 4px rgba(0,0,0,0.75);
     box-shadow: 4px 4px 5px 4px rgba(0,0,0,0.75);
